# HardwareVisualizer

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.ja.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  biome.json  biome.jsonc  components.json  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.cjs
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check-licenses.ts  checkVersion.cjs  extract-apache-notices.ts  extractVersion.cjs  generate-licenses.ts  update-tauri-config.ts  updateTauriConfig.cjs  updateTauriConfig.ts
.github/workflows/: auto-merge.yml  auto-release-notes.yml  auto-update-licenses.yml  auto-update-npm.yml  auto-update-safe-chain.yml  check-version-before-merge.yaml  check-version-on-pr.yaml  check-version.yaml  check-version.yml  ci-setup.yaml  ci.yaml  ci.yml  claude-auto-review.yml  claude.yml  codeql.yml  dependabot-auto-merge.yml  pr-labeler.yml  publish.yaml  publish.yml  rust-clippy.yml  test-auto-release-notes.yml  test-build.yaml  test-build.yml
claude-reports/: PERFORMANCE_ANALYSIS.md  dependency-analysis-report.md
docs/: ARCHITECTURE_MIGRATION_PLAN.md  BACKEND_ARCHITECTURE.md  README.ja.md  platform_architecture.md
docs/ARCHITECTURE/: BACKEND_ARCHITECTURE.md
integration/specs/: init.e2e.js
src/: App.tsx  index.css  lazyScreens.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/assets/deb/: com.HardwareVisualizer.app.policy
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/_tests/: mod.rs
src-tauri/src/_tests/commands/: background_image_test.rs  hardware_test.rs  mod.rs  settings_test.rs  system_test.rs  ui_test.rs
src-tauri/src/_tests/enums/: error_test.rs  hardware_test.rs  mod.rs  settings_test.rs
src-tauri/src/_tests/infrastructure/: mod.rs
src-tauri/src/_tests/infrastructure/providers/: mod.rs
src-tauri/src/_tests/infrastructure/providers/linux/: dmidecode_test.rs  kernel_test.rs  mod.rs  procfs_test.rs
src-tauri/src/_tests/models/: mod.rs  settings_test.rs
src-tauri/src/_tests/platform/: factory_test.rs  mock_platform_test.rs  mod.rs  platform_edge_cases_test.rs  platform_factory_test.rs  platform_test.rs  platform_traits_test.rs
src-tauri/src/_tests/services/: language_service_test.rs  memory_service_test.rs  mod.rs  network_service_test.rs
src-tauri/src/_tests/utils/: color_test.rs  file_test.rs  formatter_test.rs  ip_test.rs  mod.rs  rounding_test.rs
src-tauri/src/backgrounds/: hardware_archive.rs  mod.rs  system_monitor.rs
src-tauri/src/commands/: background_image.rs  config.rs  hardware.rs  mod.rs  settings.rs  system.rs  ui.rs  updater.rs
src-tauri/src/database/: db.rs  gpu_archive.rs  hardware_archive.rs  migration.rs  mod.rs  process_stats.rs
src-tauri/src/enums/: config.rs  error.rs  hardware.rs  mod.rs  settings.rs
src-tauri/src/infrastructure/: directx.rs  dmidecode.rs  drm_sys.rs  kernel.rs  mod.rs  nvapi.rs  wmi_provider.rs
src-tauri/src/infrastructure/database/: db.rs  gpu_archive.rs  hardware_archive.rs  process_stats.rs
src-tauri/src/infrastructure/providers/: drm_sys.rs  lspci.rs  mod.rs  net_sys.rs  procfs.rs  sysinfo_provider.rs  wmi_provider.rs
src-tauri/src/infrastructure/providers/api/: libre_hardware_monitor_provider.rs  mod.rs
src-tauri/src/infrastructure/providers/linux/: dmidecode.rs  drm_sys.rs  kernel.rs  lspci.rs  mod.rs  net_sys.rs  procfs.rs
src-tauri/src/infrastructure/providers/macos/: mac_memory.rs  mod.rs  net_sys.rs  network.rs  sysctl.rs  system_profiler.rs
src-tauri/src/infrastructure/providers/windows/: directx.rs  mod.rs  nvapi_provider.rs  wmi_provider.rs
src-tauri/src/models/: background_image.rs  hardware.rs  libre_hardware_monitor_model.rs  libre_hardware_monitor_state.rs  mod.rs  settings.rs
src-tauri/src/platform/: factory.rs  mod.rs  traits.rs
src-tauri/src/platform/common/: mod.rs
src-tauri/src/platform/common/memory/: cached.rs  dmidecode.rs  memory_info_linux.rs
src-tauri/src/platform/linux/: amd_gpu_linux.rs  cache.rs  gpu.rs  gpu_service.rs  ip_linux.rs  memory.rs  memory_service.rs  mod.rs  network.rs  network_service.rs
src-tauri/src/platform/macos/: gpu.rs  gpu_service.rs  memory.rs  memory_service.rs  mod.rs  network.rs  network_service.rs
src-tauri/src/platform/windows/: gpu.rs  gpu_service.rs  memory.rs  memory_service.rs  mod.rs  network.rs  network_service.rs
src-tauri/src/repositories/: memory_repository.rs  mod.rs  platform_repository.rs
src-tauri/src/services/: amd_gpu_linux.rs  archive_service.rs  background_image_service.rs  cpu_service.rs  data_export_service.rs  directx_gpu_service.rs  dmidecode.rs  gpu_linux.rs  gpu_service.rs  hardware_archive_service.rs  hardware_service.rs  hardware_services.rs  intel_gpu_linux.rs  ip_linux.rs  language.rs  language_service.rs  memory_service.rs  mod.rs  monitoring_service.rs  network_service.rs  nvidia_gpu_service.rs  process_service.rs  setting_service.rs  settings_service.rs  system_info_service.rs  system_service.rs  ui_service.rs  wmi_service.rs
src-tauri/src/services/memory/: cached.rs  dmidecode.rs  memory_info_linux.rs  mod.rs  proc_meminfo.rs
src-tauri/src/structs/: hardware.rs  hardware_archive.rs  mod.rs  settings.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/tests/commands/: config.rs  config_test.rs  mod.rs  settings.rs
src-tauri/src/tests/utils/: formatter.rs  ip.rs  mod.rs
src-tauri/src/utils/: color.rs  file.rs  formatter.rs  ip.rs  logger.rs  mod.rs  rounding.rs  tauri.rs
src-tauri/src/workers/: hardware_archive.rs  libre_hardware_monitor_import.rs  mod.rs  system_monitor.rs
src-tauri/templates/: main.desktop
src/atom/: ui.ts  useHardwareInfoAtom.ts  useSettingsAtom.ts
src/components/: ErrorFallback.test.tsx
src/lib/: i18n.ts  (+12 more)
tmp/: THIRD_PARTY_NOTICES.md
(+232 files in other folders)
