[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
lto = true

[package]
name = "hardware_visualizer"
version = "0.2.0"
description = "A real-time hardware monitoring tool for Windows"
authors = ["@shm11C3"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
tauri = { version = "2.1.1", features = [] }
sysinfo = "0.33.0"
tauri-plugin-window-state = { version = "2.2.0" }
nvapi = "=0.1.4"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = true, features = ["env-filter"]  }
chrono = "0.4.39"
wmi = "0.14.2"
rust_decimal = "1.23.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-store = "2.2.0"
base64 = "0.22"
image = "0.25.5"
dxgi = "0.1.7"
winapi = { version = "0.3", features = ["dxgi"] }
regex = "1.11.1"
tempfile = "3.14.0"
sys-locale = "0.3.2"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"
specta="=2.0.0-rc.20"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    #"Win32_Graphics_Direct3D",
    #"Win32_Graphics_Direct3D11",
    #"Win32_Graphics_Dxgi"
]

[lib]
name = "hardware_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tauri = { version = "2.1.1", features = ["test"] }
