[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
lto = true

[profile.ci]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 256

[package]
name = "hardware_visualizer"
version = "1.0.0"
description = "A real-time hardware monitoring tool for Windows"
authors = ["@shm11C3"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }


[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.226", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
sysinfo = "0.37.0"
tauri-plugin-window-state = { version = "2.4.0" }
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "env-filter",
    "fmt",
] }
chrono = "0.4.42"
rust_decimal = "1.38.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-store = "2.4.0"
base64 = "0.22"
image = { version = "0.25.8", default-features = false, features = ["png"] }
regex = "1.11.2"
tempfile = "3.22.0"
sys-locale = "0.3.2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
specta = "=2.0.0-rc.22"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
async-trait = "0.1"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
wmi = "0.17.2"
dxgi = "0.1.7"
winapi = { version = "0.3", features = ["dxgi"] }
windows = { version = "0.62.0", features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
nvapi = "=0.1.4"

[target.'cfg(target_os = "linux")'.dependencies]
ipnet = "2.11.0"
dirs = "6.0.0"


[lib]
name = "hardware_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tauri = { version = "2.8.5", features = ["test"] }
mockall = "0.13"
cargo-deny = "0.18.5"
cargo-license = "0.7.0"
trusted-signing-cli = "0.8.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
